force-app/main/default/objects/cuda_signnow__SNAccess__c/cuda_signnow__SNAccess__c.object-meta.xml
<CustomObject>
    <description>Store SN Auth Tokens</description>
    <label>SNAccess</label>
    <nameField>
        <label>SNAccess Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SNAccesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>