force-app/main/default/objects/cuda_signnow__SNAccess__c/fields/cuda_signnow__refresh_token__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__refresh_token__c</fullName>
    <description>SN Refresh Token</description>
    <inlineHelpText>SN Refresh Token</inlineHelpText>
    <label>refresh_token</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>