force-app/main/default/objects/cuda_signnow__SNAccess__c/fields/cuda_signnow__salesforce_user_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__salesforce_user_id__c</fullName>
    <label>salesforce_uid</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>