force-app/main/default/objects/cuda_signnow__SNAccess__c/fields/cuda_signnow__signnow_email__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__signnow_email__c</fullName>
    <description>SignNow user email</description>
    <label>signnow_email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>