force-app/main/default/objects/cuda_signnow__SNAccess__c/fields/cuda_signnow__signnow_user_id__c.field-meta.xml
<CustomField>
    <fullName>cuda_signnow__signnow_user_id__c</fullName>
    <description>SignNow user id</description>
    <inlineHelpText>SignNow user id</inlineHelpText>
    <label>signnow_user_id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>